src/js/sass/footnotes-ie7.scss
@charset "utf-8";
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * www.tbs.gc.ca/ws-nw/wet-boew/terms / www.sct.gc.ca/ws-nw/wet-boew/conditions
 */
.ie7 {
	.wet-boew-footnotes {
		display: inline-block;
	}
}

@media print {
	.ie7 {
		.wet-boew-footnotes dl dd {
			overflow: auto;
		}
	}
}

